# DesignPatterns

./: CMakeLists.txt  Main.cpp
Abstract Factory/: AbstractFactoryTest.cpp  AbstractFactoryTest.h  AbstractFactoryTest.hpp  AddCommand.cpp  AddCommand.h  AddCommand.hpp  AddCommandFactory.cpp  AddCommandFactory.h  AddCommandFactory.hpp  Command.h  CommandFactory.h  CommandFactory.hpp  RemoveCommand.cpp  RemoveCommand.h  RemoveCommand.hpp  RemoveCommandFactory.cpp  RemoveCommandFactory.h  RemoveCommandFactory.hpp
Adapter/: AdapterTest.cpp  AdapterTest.h  AdapterTest.hpp  ILogger.h  Logger.cpp  Logger.h  Logger.hpp  LoggerAdapter.cpp  LoggerAdapter.h  LoggerAdapter.hpp  ThirdPartyLogger.cpp  ThirdPartyLogger.hpp
Bridge/: BridgeTest.cpp  BridgeTest.hpp  Circle.cpp  Circle.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  RendererAPI.hpp  Shape.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Builder/: BrickHouseBuilder.cpp  BrickHouseBuilder.h  BrickHouseBuilder.hpp  Builder.hpp  BuilderTest.cpp  BuilderTest.h  BuilderTest.hpp  Director.cpp  Director.h  Director.hpp  House.cpp  House.hpp  WoodHouseBuilder.cpp  WoodHouseBuilder.h  WoodHouseBuilder.hpp
Chain Responsibility/: ChainResponsibilityTest.cpp  ChainResponsibilityTest.hpp  ErrorLogger.cpp  ErrorLogger.hpp  InfoLogger.cpp  InfoLogger.hpp  Logger.cpp  Logger.hpp  WarningLogger.cpp  WarningLogger.hpp
Command/: Car.cpp  Car.hpp  CarRemote.cpp  CarRemote.hpp  Command.hpp  CommandTest.cpp  CommandTest.hpp  StartCarCommand.cpp  StartCarCommand.hpp  StopCarCommand.cpp  StopCarCommand.hpp
Composite/: CompositeTest.cpp  CompositeTest.h  CompositeTest.hpp  Department.cpp  Department.h  Department.hpp  Employee.cpp  Employee.h  Employee.hpp  OrganizationComponent.h
Decorator/: Circle.cpp  Circle.hpp  ColoredShape.cpp  ColoredShape.hpp  DecoratorTest.cpp  DecoratorTest.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  ShapeDecorator.cpp  ShapeDecorator.hpp
Facade/: CPU.cpp  CPU.hpp  ComputerFacade.cpp  ComputerFacade.hpp  FacadeTest.cpp  FacadeTest.hpp  HardDrive.cpp  HardDrive.hpp  Memory.cpp  Memory.hpp
Factory/: AddCommand.cpp  AddCommand.h  AddCommand.hpp  Command.hpp  CommandFactory.h  CommandFactory.hpp  FactoryTest.cpp  FactoryTest.h  FactoryTest.hpp  RemoveCommand.cpp  RemoveCommand.h  RemoveCommand.hpp
Observer/: CPU.cpp  CPU.hpp  CPUMonitor.cpp  CPUMonitor.hpp  Observer.hpp  ObserverTest.cpp  ObserverTest.hpp
Prototype/: Circle.cpp  Circle.h  Circle.hpp  PrototypeTest.cpp  PrototypeTest.h  PrototypeTest.hpp  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Shape.hpp
Singleton/: SingletonClass.cpp  SingletonClass.h  SingletonTest.cpp  SingletonTest.h  SingletonTest.hpp
State/: ConcreteStateA.cpp  ConcreteStateA.hpp  ConcreteStateB.cpp  ConcreteStateB.hpp  Context.cpp  Context.hpp  State.hpp  StateTest.cpp  StateTest.hpp
